fix(ad-hoc): Add support for the following behavior
✅ Fails authentication if sourceUserPrimaryID_UDMKey (remIdGUID_value) is null or empty.
✅ Fails authentication if sourceIdentityProviderID_KeycloakAndUDMKey is null or empty.
✅ Fails authentication if any required configuration key is missing.